WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 227760
[Nicosia] Canvas animations don't work with threaded rendering
https://bugs.webkit.org/show_bug.cgi?id=227760
Summary
[Nicosia] Canvas animations don't work with threaded rendering
Alice Mikhaylenko
Reported
2021-07-07 11:49:15 PDT
Test cases: all of the examples in
https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_animations
I can reproduce it with GTK4 WebKitGTK build, but it works with `WEBKIT_NICOSIA_PAINTING_THREADS=0` or GTK3.
Attachments
Patch
(3.05 KB, patch)
2022-05-05 05:44 PDT
,
Miguel Gomez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-07-14 11:50:15 PDT
<
rdar://problem/80588913
>
Miguel Gomez
Comment 2
2022-05-05 05:44:04 PDT
Created
attachment 458868
[details]
Patch
Adrian Perez
Comment 3
2022-05-09 03:47:16 PDT
Comment on
attachment 458868
[details]
Patch The mac-wk1 EWS failure is unrelated, FWIW.
EWS
Comment 4
2022-05-09 03:55:22 PDT
Committed
r293971
(
250409@main
): <
https://commits.webkit.org/250409@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458868
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug