[Nicosia] Canvas animations don't work with threaded rendering https://bugs.webkit.org/show_bug.cgi?id=227760 <rdar://problem/80588913>

Reviewed by Adrian Perez de Castro.

Implement Nicosia::CairoOperationRecorder::draImageBuffer(), which is required in order to paint
canvas contents into a GraphicsContext.

* platform/graphics/nicosia/cairo/NicosiaCairoOperationRecorder.cpp:
(Nicosia::CairoOperationRecorder::drawImageBuffer):

Canonical link: https://commits.webkit.org/250409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293971 268f45cc-cd09-0410-ab3c-d52691b4dbfc